--- a/style.css
+++ b/style.css
@@ -103,3 +103,26 @@ body {
     opacity: 1;
     right: 0;
    }
+
+ /* Created by watermark */
+  .createdBy {
+
+    color: aliceblue;
+    font-size: small;
+    align-items:center;
+    justify-content: center;
+    display: flex;
+
+  } 
+
+  .createdBy a {
+
+    color: aliceblue;
+
+  }
+
+  .createdBy a:hover {
+
+    color: rgb(24, 126, 216);
+
+  }
